test/static/bad/cycle-length-one.mly
%start a
%type <unit> a
%token A B C

%%

a:
  B       {}
| A? a C? {}
