test/static/bad/cycle-length-one.exp
File "cycle-length-one.mly", line 7, characters 0-1:
Error: the grammar is cyclic:
the nonterminal symbol a expands to itself.
A cyclic grammar is ambiguous.
